<resources>
    <string name="app_name">InventoryApp</string>
    <string name="sanity_check">Product, or Suplier name or Suplier Contact is empty</string>
    <string name="data_ok">The Data is properly inserted into the database</string>
    <string name="data_not_ok">There was an error trying to insert data</string>
    <string name="empty">Sorry, no items were added</string>
    <string name="delete">Delete All</string>
    <string name="delete_action">delete</string>
    <string name="save">Save Product</string>
    <string name="add_product">Add new Item</string>
    <string name="edit_product">Update Item</string>
    <string name="category_overview">Product</string>
    <string name="hint">Product Name</string>
    <string name="name">Name:</string>
    <string name="quantity">Qtd:</string>
    <string name="price">Price:</string>
    <string name="sales">Sales:</string>
    <string name="product_info">Product Information</string>
    <string name="storage_info">Storage Information</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="picture">Product Picture</string>
    <string name="availability">Availability:</string>
    <string name="supplier_info">Supplier Information</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier">Supplier: </string>
    <string name="supplier_contact">Email:</string>
    <string name="emailHint">Contact email</string>
    <string name="buymore">New Order</string>
    <string name="moneyTag">USD $: </string>
    <string name="qtdCode">Qtd: </string>
    <string name="salesInfo"> Sales</string>
    <string name="inStock">Available</string>
    <string name="noStock">Not Available</string>
    <string name="productadded">Product Added</string>
    <string name="productupdated">Product Updated</string>
    <string name="productremoved">Product Removed</string>
    <string name="invalidinput">Name, Supplier, Image or Contact Info can\'t be blank</string>
    <string name="unsaved">Are you sure that you want to quit?</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Keep Editing?</string>
    <string name="sell">Sell Item</string>

    <!-- Strings based on Udacity - Android Basics Content Providers and Loaders Lessons -->

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting the product</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all">Delete all the products?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="deleteDialog">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
</resources>
