<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_info"
            style="@style/details_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="24sp"
                tools:text="Name:" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textSize="24sp"
                tools:text="Qtd:" />

            <Button
                android:id="@+id/add_qtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                tools:text="+" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/rem_qtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                tools:text="-" />
        </LinearLayout>

        <!-- Price Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="24sp"
                tools:text="Price:" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Qtd Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sell_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />

        <!-- Storage Info Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/storage_info"
            android:textSize="24sp"
            tools:text="Storage Info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:src="@drawable/default_photo" />

            <TextView
                android:id="@+id/picture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/picture"
                android:textSize="24sp"
                tools:text="Product Picture" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black" />

        <!-- Supplier Section-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/supplier_info"
            android:textSize="24sp"
            tools:text="Supplier Information" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/supplier"
                android:textSize="24sp"
                tools:text="Supplier:" />

            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/supplier_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/supplier"
                android:textSize="24sp"
                tools:text="@string/supplier_contact" />

            <EditText
                android:id="@+id/edit_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/new_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buymore" />

    </LinearLayout>
</ScrollView>